--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "private": true,
   "version": "1.0.0",
   "engines": {
-  "node": "24.x"
+  "node": "22.x",
+    "pnpm": ">=9"
 },
-  "packageManager": "pnpm@10.0.0",
   "dependencies": {
     "@testing-library/jest-dom": "5.11.9",
     "@testing-library/react": "11.2.5",
