Updated package.json with package manager and build script

--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "ipl-dashboard-app",
   "private": true,
   "version": "1.0.0",
+  "packageManager": "pnpm@9.15.4",
   "engines": {
-  "node": "22.x",
+    "node": "22.x",
     "pnpm": ">=9"
-},
+  },
   "dependencies": {
     "@testing-library/jest-dom": "5.11.9",
     "@testing-library/react": "11.2.5",
@@ -32,7 +33,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "NODE_OPTIONS=--openssl-legacy-provider react-scripts build",
     "test": "react-scripts test",
     "lint": "eslint .",
     "lint:fix": "eslint --fix src/",
