Update package.json to use Node 22 and pnpm 9.15.4

--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "ipl-dashboard-app",
   "private": true,
   "version": "1.0.0",
+  "packageManager": "pnpm@9.15.4",
   "engines": {
-    "node": "18.x",
+    "node": "22.x",
+    "pnpm": ">=9"
   },
   "dependencies": {
     "@testing-library/jest-dom": "5.11.9",
